frontend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pfe-frontend
spec:
  selector:
    app: pfe-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
